Tercera modificacion pre entrega

--- a/Pages/Competencias.html
+++ b/Pages/Competencias.html
@@ -80,22 +80,11 @@
 
     <main class="contenido">
         <div class="Ultima">
-            <p class="TextoC">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem in explicabo, adipisci dolore
-                nobis perspiciatis pariatur non vitae ducimus eligendi qui laborum sit, corporis eum harum assumenda
-                ipsa dolores iusto ipsam consequuntur ullam dicta quia fugit distinctio? Consectetur quam inventore
-                facere suscipit quibusdam minima id, a assumenda ratione reiciendis nulla voluptates aperiam est vel
-                iusto consequatur doloremque ex, minus fugiat quae. Aspernatur eligendi quo natus labore doloribus
-                asperiores ab tempore ea quisquam hic quos minima cupiditate reprehenderit ducimus in inventore nobis
-                dolore, magni suscipit debitis temporibus dolor. Minus iure labore aspernatur impedit, architecto
-                distinctio sapiente soluta animi a officiis eos consequuntur voluptas incidunt consequatur consectetur
-                possimus culpa, asperiores illum earum voluptatem, doloribus quos est nobis. Maiores nihil sed repellat,
-                magni expedita cumque doloremque soluta ut. Placeat odit dignissimos, sequi, suscipit fugiat repellat
-                deleniti modi labore et vero cum sunt voluptas repudiandae nulla. In id nam sed quas nulla perspiciatis
-                excepturi quo doloremque repudiandae accusantium, corrupti, molestias accusamus libero inventore ipsum
-                asperiores porro vitae rem debitis, adipisci velit quos quasi facilis aliquam. Sed consequatur aliquid
-                ullam asperiores. Animi fugit itaque natus magni soluta, aspernatur nisi expedita facilis cupiditate
-                blanditiis impedit nostrum neque ea saepe tenetur iure iusto temporibus asperiores voluptas accusamus.
+            <div class="TextoC">
+            <h3>Campeonato nacional de canotaje race</h3>
+            <p>Este sábado 4 de junio el Club Remeros Canarios de la ciudad de Santa Lucía, Canelones, recibe al primer Campeonato Nacional de Short Race! Habrán pruebas en todas las categorías desde las 9 de la mañana!
             </p>
+        </div>
             <a href="https://www.instagram.com/p/CeUGqauuwZi/?utm_source=ig_web_copy_link"><img class="UltimaC"
                     src="../IMG/Competencia.jpg" alt="Evento"></a>
         </div>
