--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -83,38 +83,38 @@
 
         <h2>¡Las mejores fotografias del deporte!</h2>
         <div class="imagenes">
+<div class="girdgaleria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaA">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaB">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaC">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaD">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaE">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaF">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaG">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaH">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaI">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaJ">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaK">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaL">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaM">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaN">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaÑ">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaO">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaP">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaQ">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaR">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaS">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaT">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaU">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaV">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaW">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaX">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaY">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaZ">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaAA">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaBB">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="GaleriaCC">
 
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
         </div>
         <!--    Seccion Final   -->
 
