--- a/Pages/Historia.html
+++ b/Pages/Historia.html
@@ -81,8 +81,8 @@
 
         <!--    El Piragüismo o Canotaje    -->
 
-        <section id="PaginaHistoria">
-            <article id="El-Piragüismo-o-Canotaje">
+        <section class="PaginaHistoria">
+            <article class="El-Piragüismo-o-Canotaje">
                 <h2>El Piragüismo o Canotaje</h2>
 
                 <p>
@@ -108,7 +108,7 @@
 
             <!--    Historia    -->
 
-            <article id="Historia">
+            <article class="Historia">
                 <h3>Historia</h3>
 
                 <p>
@@ -131,7 +131,7 @@
 
             <!--    La revolución de la tecnología    -->
 
-            <article id="revolución de la tecnología">
+            <article class="revolución de la tecnología">
                 <h3>La revolución de la tecnología</h3>
 
                 <p>
@@ -170,7 +170,7 @@
 
             <!--    En la actualidad    -->
 
-            <article id="En la actualidad">
+            <article class="En la actualidad">
                 <h3>En la actualidad</h3>
 
                 <p>
@@ -187,7 +187,7 @@
 
             <!--    Modalidades    -->
 
-            <article id="Modalidades">
+            <article class="Modalidades">
                 <h3>Modalidades</h3>
 
                 <p>
