--- a/Pages/Tienda Oficiales.html
+++ b/Pages/Tienda Oficiales.html
@@ -89,22 +89,22 @@
                     ubicada en Salto Uruguay.
                 </p>
 
-                <div>
-                    <div class="ImgTienda">
+                <div class="bTienda">
+                    <div class="aTienda">
                         <img src="../IMG/Sioox.png" alt="Sioox Logo">
-                    </div>
+                    
                     <iframe class="MapaTienda"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.695305197595!2d-57.970212870598864!3d-31.367386321993813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95adc2de5b8d340b%3A0x29ce35eaa800c95!2sCam.%20del%20Exodo%202555%2C%2050000%20Salto%2C%20Departamento%20de%20Salto!5e0!3m2!1ses-419!2suy!4v1651203578392!5m2!1ses-419!2suy"
                         width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                    </div>
 
                 <div>
                     <a href="http://www.nelo.eu/product/k1-cinco/?size=m"><img class="Nelo5" src="../IMG/Nelo1.png"
                             alt="Nelo5"></a>
                 </div>
-
-                <p class="TextoT">
+            </div>
+                            <p class="TextoT">
                     Otra alternativa es en los diversos grupos de Facebook y Marketplace.
                 </p>
             </div>
