--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -104,7 +104,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="col-12">
+                <div class="enviar">
                     <button type="submit" class="btn btn-primary">Enviar</button>
                 </div>
         </form>
