Cuarta modificacion pre entrega

--- a/Pages/Historia.html
+++ b/Pages/Historia.html
@@ -84,26 +84,44 @@
         <section class="PaginaHistoria">
             <article class="El-Piragüismo-o-Canotaje">
                 <h2>El Piragüismo o Canotaje</h2>
-
-                <p>
-                    El piragüismo o canotaje es un deporte acuático que se practica sobre una embarcación ligera,
-                    normalmente de fibra de vidrio o plástico en embarcaciones de recreo y fibras de kevlar o carbono en
-                    embarcaciones de competición. La embarcación es propulsada por una o varias personas con una pala
-                    que van situadas de frente a la proa de la embarcación, a diferencia del remo, deporte en el que se
-                    sitúan de espalda. Las embarcaciones utilizadas son piraguas, kayaks, y canoas.
-                </p>
-                <p>
-                    Las competiciones se hacen durante todo el año. Se divide en categorías según la edad y sexo. La
-                    división por edad establece la distancia que se rema en cada categoría que va aumentando conforme se
-                    va subiendo de categoría. No obstante de manera provisional, en algunas competiciones un palista
-                    podrá cambiar su categoría a una superior. Por ejemplo: un juvenil y un sub-23 podrán remar en una
-                    competición como una embarcación sub-23.
-                </p>
-                <p>
-                    El Diccionario de la lengua española define «piragüismo» como el deporte que consiste en la
-                    competición de dos o más piraguas, movidas a remo por sendos piragüistas, que pueden ir sentados o
-                    de rodillas.
-                </p>
+                <div class="PrimerImagenH">
+                    <div class="Texto">
+                        <p>
+                            El piragüismo o canotaje es un deporte acuático que se practica sobre una embarcación
+                            ligera,
+                            normalmente de fibra de vidrio o plástico en embarcaciones de recreo y fibras de kevlar o
+                            carbono en
+                            embarcaciones de competición. La embarcación es propulsada por una o varias personas con una
+                            pala
+                            que van situadas de frente a la proa de la embarcación, a diferencia del remo, deporte en el
+                            que
+                            se
+                            sitúan de espalda. Las embarcaciones utilizadas son piraguas, kayaks, y canoas.
+                        </p>
+                        <p>
+                            Las competiciones se hacen durante todo el año. Se divide en categorías según la edad y
+                            sexo. La
+                            división por edad establece la distancia que se rema en cada categoría que va aumentando
+                            conforme se
+                            va subiendo de categoría. No obstante de manera provisional, en algunas competiciones un
+                            palista
+                            podrá cambiar su categoría a una superior. Por ejemplo: un juvenil y un sub-23 podrán remar
+                            en
+                            una
+                            competición como una embarcación sub-23.
+                        </p>
+                        <p>
+                            El Diccionario de la lengua española define «piragüismo» como el deporte que consiste en la
+                            competición de dos o más piraguas, movidas a remo por sendos piragüistas, que pueden ir
+                            sentados
+                            o
+                            de rodillas.
+                        </p>
+                    </div>
+                    <div class="Imagen">
+                        <img src="../IMG/piraguismo_0.jpg" alt="Imagen del deporte">
+                    </div>
+                </div>
             </article>
 
             <!--    Historia    -->
@@ -172,7 +190,8 @@
 
             <article class="En la actualidad">
                 <h3>En la actualidad</h3>
-
+<div class="SegundaImagenH">
+    <div class="Texto">
                 <p>
                     Alemania y Hungría se encuentran entre los países más destacados en este deporte; el primero, a lo
                     largo de la historia, ha sumado 192 medallas de oro, contando las logradas por los distintos estados
@@ -183,6 +202,11 @@
                     más fuerte desde 2017. Entre los países hispanohablantes, también han obtenido medallas olímpicas
                     Cuba, México, Argentina y Chile.
                 </p>
+            </div>
+            <div class="Imagen">
+                <img src="../IMG/piraguismo_1.jpg" alt="Imegen de deportista">
+        </div>
+    </div>
             </article>
 
             <!--    Modalidades    -->
@@ -268,7 +292,7 @@
                 </span>
             </div>
         </div>
-        
+
         <div class="SemiFinal">
             <a href="../Pages/Política de cookies.html" target="blank">Política de cookies</a>
             <a href="../Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
