Penultima modificacion pre entrega

--- a/Pages/Competencias.html
+++ b/Pages/Competencias.html
@@ -26,14 +26,16 @@
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
                 <ul class="Redes">
-                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png"
+                                alt="Logo de Twitter"></a>
                     </li>
-                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png" alt=""></a>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png"
+                                alt="Logo de Instagram"></a>
                     </li>
                     <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
-                                alt="Facebook"></a></li>
+                                alt="Logo de Facebook"></a></li>
                     <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
-                                alt="YouTube"></a>
+                                alt="Logo de YouTube"></a>
                     </li>
                 </ul>
             </div>
@@ -81,10 +83,12 @@
     <main class="contenido">
         <div class="Ultima">
             <div class="TextoC">
-            <h3>Campeonato nacional de canotaje race</h3>
-            <p>Este sábado 4 de junio el Club Remeros Canarios de la ciudad de Santa Lucía, Canelones, recibe al primer Campeonato Nacional de Short Race! Habrán pruebas en todas las categorías desde las 9 de la mañana!
-            </p>
-        </div>
+                <h3>Campeonato nacional de canotaje race</h3>
+                <p>Este sábado 4 de junio el Club Remeros Canarios de la ciudad de Santa Lucía, Canelones, recibe al
+                    primer Campeonato Nacional de Short Race! Habrán pruebas en todas las categorías desde las 9 de la
+                    mañana!
+                </p>
+            </div>
             <a href="https://www.instagram.com/p/CeUGqauuwZi/?utm_source=ig_web_copy_link"><img class="UltimaC"
                     src="../IMG/Competencia.jpg" alt="Evento"></a>
         </div>
@@ -136,7 +140,7 @@
                 </span>
             </div>
         </div>
-        
+
         <div class="SemiFinal">
             <a href="../Pages/Política de cookies.html" target="blank">Política de cookies</a>
             <a href="../Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
