--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -24,14 +24,16 @@
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
                 <ul class="Redes">
-                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png"
+                                alt="Logo de Twitter"></a>
                     </li>
-                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png" alt=""></a>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png"
+                                alt="Logo de Instagram"></a>
                     </li>
                     <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
-                                alt="Facebook"></a></li>
+                                alt="Logo de Facebook"></a></li>
                     <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
-                                alt="YouTube"></a>
+                                alt="Logo de YouTube"></a>
                     </li>
                 </ul>
             </div>
