--- a/Pages/Historia.html
+++ b/Pages/Historia.html
@@ -25,14 +25,16 @@
                 <h1 class="display-1">Canotaje Uy</h1>
 
                 <ul class="Redes">
-                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png"
+                                alt="Logo de Twitter"></a>
                     </li>
-                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png" alt=""></a>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png"
+                                alt="Logo de Instagram"></a>
                     </li>
                     <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
-                                alt="Facebook"></a></li>
+                                alt="Logo de Facebook"></a></li>
                     <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
-                                alt="YouTube"></a>
+                                alt="Logo de YouTube"></a>
                     </li>
                 </ul>
             </div>
@@ -190,23 +192,30 @@
 
             <article class="En la actualidad">
                 <h3>En la actualidad</h3>
-<div class="SegundaImagenH">
-    <div class="Texto">
-                <p>
-                    Alemania y Hungría se encuentran entre los países más destacados en este deporte; el primero, a lo
-                    largo de la historia, ha sumado 192 medallas de oro, contando las logradas por los distintos estados
-                    alemanes a lo largo de la historia, mientras que el segundo también lidera los logros en campeonatos
-                    mundiales, con 191 medallas de oro. Entre los países de habla hispana, España es el mejor ubicado,
-                    tanto en el medallero olímpico con 16 medallas, siendo 5 de ellas de oro, 7 de plata y 4 de bronce ,
-                    como en los campeonatos mundiales con una veintena de medallas de oro, tomando una posición mucho
-                    más fuerte desde 2017. Entre los países hispanohablantes, también han obtenido medallas olímpicas
-                    Cuba, México, Argentina y Chile.
-                </p>
-            </div>
-            <div class="Imagen">
-                <img src="../IMG/piraguismo_1.jpg" alt="Imegen de deportista">
-        </div>
-    </div>
+                <div class="SegundaImagenH">
+                    <div class="Texto">
+                        <p>
+                            Alemania y Hungría se encuentran entre los países más destacados en este deporte; el
+                            primero, a lo
+                            largo de la historia, ha sumado 192 medallas de oro, contando las logradas por los distintos
+                            estados
+                            alemanes a lo largo de la historia, mientras que el segundo también lidera los logros en
+                            campeonatos
+                            mundiales, con 191 medallas de oro. Entre los países de habla hispana, España es el mejor
+                            ubicado,
+                            tanto en el medallero olímpico con 16 medallas, siendo 5 de ellas de oro, 7 de plata y 4 de
+                            bronce ,
+                            como en los campeonatos mundiales con una veintena de medallas de oro, tomando una posición
+                            mucho
+                            más fuerte desde 2017. Entre los países hispanohablantes, también han obtenido medallas
+                            olímpicas
+                            Cuba, México, Argentina y Chile.
+                        </p>
+                    </div>
+                    <div class="Imagen">
+                        <img src="../IMG/piraguismo_1.jpg" alt="Imegen de deportista">
+                    </div>
+                </div>
             </article>
 
             <!--    Modalidades    -->
