--- a/Pages/Política de cookies.html
+++ b/Pages/Política de cookies.html
@@ -22,14 +22,16 @@
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
                 <ul class="Redes">
-                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png"
+                                alt="Logo de Twitter"></a>
                     </li>
-                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png" alt=""></a>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png"
+                                alt="Logo de Instagram"></a>
                     </li>
                     <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
-                                alt="Facebook"></a></li>
+                                alt="Logo de Facebook"></a></li>
                     <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
-                                alt="YouTube"></a>
+                                alt="Logo de YouTube"></a>
                     </li>
                 </ul>
             </div>
@@ -75,12 +77,12 @@
     </header>
 
 
-    <section id="Política-de-Cookies">
+    <section>
 
-        <h2 id="TitulosSecundarios">Política de Cookies</h2>
-        <article id="Definición">
+        <h2>Política de Cookies</h2>
+        <article>
             <h3>1) ¿QUÉ ES UNA COOKIE?</h3>
-            <p id="TextoDefinición">
+            <p class="TextoDefinición">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus maiores praesentium voluptatibus
                 ratione, at non? Est ab iusto officiis ex assumenda fuga quasi amet id. Accusantium fugit sit veritatis
                 pariatur ex nulla, earum unde architecto itaque nemo consequatur molestiae et ipsam necessitatibus
@@ -107,9 +109,9 @@
             </p>
         </article>
 
-        <article id="CookiesUtilizamos">
+        <article>
             <h3>2) ¿QUÉ CLASES DE COOKIES UTILIZAMOS?</h3>
-            <p id="Utilizamos">
+            <p class="TextoDefinición">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium aperiam quibusdam unde, hic,
                 nostrum quam distinctio sed perspiciatis veritatis tempore perferendis. Assumenda doloribus inventore
                 officiis explicabo omnis minus iusto quis sed ea suscipit ullam quam obcaecati illum, nam eaque animi
