--- a/Pages/Política de privacidad.html
+++ b/Pages/Política de privacidad.html
@@ -22,14 +22,16 @@
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
                 <ul class="Redes">
-                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png"
+                                alt="Logo de Twitter"></a>
                     </li>
-                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png" alt=""></a>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png"
+                                alt="Logo de Instagram"></a>
                     </li>
                     <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
-                                alt="Facebook"></a></li>
+                                alt="Logo de Facebook"></a></li>
                     <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
-                                alt="YouTube"></a>
+                                alt="Logo de YouTube"></a>
                     </li>
                 </ul>
             </div>
@@ -75,8 +77,8 @@
     </header>
 
 
-    <h2 id="TitulosSecundarios">Política de privacidad</h2>
-    <p id="TextoDefinición">
+    <h2>Política de privacidad</h2>
+    <p class="TextoDefinición">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos nisi dicta, nulla iusto recusandae nobis
         sequi ut, aliquid optio laudantium libero consectetur voluptatibus alias incidunt expedita! Expedita quod modi
         nesciunt mollitia! Magni quod expedita aperiam dolorem doloremque! Deserunt ipsam repellat reiciendis, unde
@@ -196,7 +198,7 @@
             </div>
         </div>
 
-        <div class="SemiFinal">
+        <div class="SemiFinal">Logo de
             <a href="../Pages/Política de cookies.html" target="blank">Política de cookies</a>
             <a href="../Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
             <a href="../Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
