--- a/Pages/Tienda Oficiales.html
+++ b/Pages/Tienda Oficiales.html
@@ -25,14 +25,16 @@
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
                 <ul class="Redes">
-                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png"
+                                alt="Logo de Twitter"></a>
                     </li>
-                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png" alt=""></a>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png"
+                                alt="Logo de Instagram"></a>
                     </li>
                     <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
-                                alt="Facebook"></a></li>
+                                alt="Logo de Facebook"></a></li>
                     <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
-                                alt="YouTube"></a>
+                                alt="Logo de YouTube"></a>
                     </li>
                 </ul>
             </div>
@@ -92,19 +94,19 @@
                 <div class="bTienda">
                     <div class="aTienda">
                         <img src="../IMG/Sioox.png" alt="Sioox Logo">
-                    
-                    <iframe class="MapaTienda"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.695305197595!2d-57.970212870598864!3d-31.367386321993813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95adc2de5b8d340b%3A0x29ce35eaa800c95!2sCam.%20del%20Exodo%202555%2C%2050000%20Salto%2C%20Departamento%20de%20Salto!5e0!3m2!1ses-419!2suy!4v1651203578392!5m2!1ses-419!2suy"
-                        width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                        <iframe class="MapaTienda"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.695305197595!2d-57.970212870598864!3d-31.367386321993813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95adc2de5b8d340b%3A0x29ce35eaa800c95!2sCam.%20del%20Exodo%202555%2C%2050000%20Salto%2C%20Departamento%20de%20Salto!5e0!3m2!1ses-419!2suy!4v1651203578392!5m2!1ses-419!2suy"
+                            width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
 
-                <div>
-                    <a href="http://www.nelo.eu/product/k1-cinco/?size=m"><img class="Nelo5" src="../IMG/Nelo1.png"
-                            alt="Nelo5"></a>
+                    <div>
+                        <a href="http://www.nelo.eu/product/k1-cinco/?size=m"><img class="Nelo5" src="../IMG/Nelo1.png"
+                                alt="Nelo5"></a>
+                    </div>
                 </div>
-            </div>
-                            <p class="TextoT">
+                <p class="TextoT">
                     Otra alternativa es en los diversos grupos de Facebook y Marketplace.
                 </p>
             </div>
