--- a/Pages/Tienda Oficiales.html
+++ b/Pages/Tienda Oficiales.html
@@ -86,7 +86,7 @@
             <h2 class="TituloTienda">¿Donde puedo conseguir un Kayak en Uruguay?</h2>
             <div class="tienda">
                 <p class="TextoTienda">
-                    Actualmente solo hay una tienda oficial donde encontrar Kayak inportados de Europa y es la tienda de
+                    Actualmente solo hay una tienda oficial donde encontrar Kayak importados de Europa y es la tienda de
                     Sioox
                     ubicada en Salto Uruguay.
                 </p>
