Solucionando Fallo Final

--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -89,8 +89,8 @@
                 <img src="..//IMG/piraguismo_0.jpg" alt="GaleriaA">
                 <img src="https://images.daznservices.com/di/library/DAZN_News/b1/ca/saul-craviotto-tokyo-2020_192eit8elk5fu1m7p8v9rw82jh.jpg?t=573448971&quality=60&h=450"
                     alt="GaleriaB">
-                <img src="http://www.sioux.com.uy/2015/productos/k_o_k1_scorpion/k_o_k1_scorpion4.jpg" alt="GaleriaC">
-                <img src="http://www.sioux.com.uy/2015/productos/k_o_k1_scorpion/k_o_k1_scorpion2.jpg" alt="GaleriaD">
+                <img src="../IMG/k_o_k1_scorpion4.jpg" alt="GaleriaC">
+                <img src="../IMG/k_o_k1_scorpion2.jpg" alt="GaleriaD">
                 <img src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2016/08/19/14716166217252.jpg"
                     alt="GaleriaE">
                 <img src="https://www.mundodeportivo.com/files/image_449_220/uploads/2016/08/15/60e70fa80a461.jpeg"
